<resources>
    <string name="app_name" translatable="false">Converter</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Converter</string>
    <string name="nav_header_subtitle" translatable="false">Made By Xface</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

        <string name="currrency" translatable="false">Currency</string>
    <string name="Distance" translatable="false">Length</string>
    <string name="Mass" translatable="false">Weight</string>
    <string name="Temp" translatable="false">Temperature</string>
    <string name="Energy" translatable="false">Energy</string>
    <string name="speed" translatable="false">Speed</string>
    <string name="Time" translatable="false">Time</string>
    <string name="Data" translatable="false">Data</string>
    <string name="Press" translatable="false">Pressure</string>
    <string name="Power" translatable="false">Power</string>
    <string name="Angel" translatable="false">Angle</string>
    <string name="Area" translatable="false">Area</string>
    <string name="Number" translatable="false">Number</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="convert" translatable="false">Convert</string>
    <string name="enter_amount" translatable="false">Enter Amount</string>
    <string name="to" translatable="false">To</string>
    <string name="enter_value">Enter Value</string>
    <string name="enter_number">Enter number</string>


    <string-array name="GlobCurr">
        <item>USD-US Doller</item>
        <item>GBP-British Pound</item>
        <item>INR-Indian Rupee</item>
        <item>AED-UAE Dirham</item>
        <item>AFG-Afghani</item>
        <item>ALL-Lek</item>
        <item>AMD-Dram</item>
        <item>ANG-Netherlands Antillean Guilder</item>
        <item>AOA-Kwanza</item>
        <item>ARS-Argentine Peso</item>
        <item>AUD-Australian Doller</item>
        <item>AWG-Florin</item>
        <item>AZN-Manant</item>
        <item>BAM-Convertible Mark</item>
        <item>BBD-Barbadian Doller</item>
        <item>BDT-Taka</item>
        <item>BGN-Bulgarian Lev</item>
        <item>BHD-Bahrain Dinar</item>
        <item>BIF-Burundi Franc</item>
        <item>BMD-Bermudian Dollar</item>
        <item>BND-Brunei Dollar</item>
        <item>BOB-Boliviano</item>
        <item>BRL-Real</item>
        <item>BSD-Bahamian Dollar</item>
        <item>BTN-Ngultrum</item>
        <item>BWP-Pula</item>
        <item>BYR-Belarus Ruble</item>
        <item>BZD-Belize Dollar</item>
        <item>CAD-Canadian Dollar</item>
        <item>CDF-Congolais Franc</item>
        <item>CHF-Swiss Franc</item>
        <item>CKD-Cook Dollar</item>
        <item>CLP-Chilean Peso</item>
        <item>CNY-Renminbi Yuan</item>
        <item>COP-Colombian Peso</item>
        <item>CRC-Colón</item>
        <item>CUP-Cuban Peso</item>
        <item>CVE-Cape Verdean Escudo</item>
        <item>CZK-Czech Krone</item>
        <item>DJF-Djibouti Franc</item>
        <item>DKK-Danish Krone</item>
        <item>DOP-Dominican Peso</item>
        <item>DZD-Algerian Dinar</item>
        <item>EGP-Egypt Pound</item>
        <item>ERN-Nakfa</item>
        <item>ETB-Birr</item>
        <item>EUR-Euro</item>
        <item>FJD-Fidschi Dollar</item>
        <item>FKP-Falklands Pound</item>
        <item>FOK-Faroese Krona</item>
        <item>GEL-Georgian Lari</item>
        <item>GGP-Guernsey Pound</item>
        <item>GHS-Ghana Cedi</item>
        <item>GIP-Gibraltar Pound</item>
        <item>GMD-Dalasi</item>
        <item>GNF-Guinea Franc</item>
        <item>GTQ-Quetzal</item>
        <item>GYD-Guyana Dollar</item>
        <item>HKD-Hong Kong Dollar</item>
        <item>HNL-Lempira</item>
        <item>HRK-Kuna</item>
        <item>HTG-Gourde</item>
        <item>HUF-hungarian Forint</item>
        <item>IDR-Indonesian Rupiah</item>
        <item>ILS-Shekel</item>
        <item>IMP-Manx Pound</item>
        <item>IQD-Iraqi Dinar</item>
        <item>IRR-Iranian Rial</item>
        <item>ISK-Icelandic Krone</item>
        <item>JEP-Jersey Sterling Pound</item>
        <item>JMD-Jamaica Dollar</item>
        <item>JOD-Jordanian Dinar</item>
        <item>JPY-Japanese Yen</item>
        <item>KES-Kenian Schilling</item>
        <item>KGS-Som</item>
        <item>KHR-Riel</item>
        <item>KID-Kiribati Dollar</item>
        <item>KMF-Comorian Franc</item>
        <item>KPW-Won</item>
        <item>KRW-Won</item>
        <item>KWD-Kuwaiti Dinar</item>
        <item>KYD-Cayman Dollar</item>
        <item>KZT-Tenge</item>
        <item>LAK-Kip</item>
        <item>LBP-Lebanese Pound</item>
        <item>LKR-Sri Lanka Rupee</item>
        <item>LRD-Liberian Dollar</item>
        <item>LSL-Lesotho Loti</item>
        <item>LYD-Libyan Dinar</item>
        <item>MAD-Moroccan Dirham</item>
        <item>MDL-Leu</item>
        <item>MGA-Malagasy Ariary</item>
        <item>MKD-Denar</item>
        <item>MMK-Kyat</item>
        <item>MNT-Tugrik</item>
        <item>MOP-Macanese Pataca</item>
        <item>MRO-Ouguiya</item>
        <item>MUR-Mauritian Rufiyaa</item>
        <item>MWK-Mexican Peso</item>
        <item>MYR-Ringgit</item>
        <item>MZN-Metical</item>
        <item>NAD-Namibian Dollar</item>
        <item>NGN-Naira</item>
        <item>NIO-Córdoba Oro</item>
        <item>NOK-Norwegian Krone</item>
        <item>NPR-Nepalese Rupee</item>
        <item>NZD-New Zealand Dollar</item>
        <item>OMR- Omani Rial</item>
        <item>PAB-Panamanian Balboa</item>
        <item>PEN-Nuevo Sol</item>
        <item>PGK-Kina</item>
        <item>PHP-Philippine Peso</item>
        <item>PKR-Pakistanian Rupee</item>
        <item>PLN-Zloty</item>
        <item>PYG-Guarani</item>
        <item>QAR-Qatari Rial</item>
        <item>RON-Leu</item>
        <item>RSD-Serbian Dinar</item>
        <item>RUB-Russian Ruble</item>
        <item>RWF-Rwandan Franc</item>
        <item>SAR-Saudi Rial</item>
        <item>SBD-Salomon Dollar</item>
        <item>SCR-Seychelles Rupee</item>
        <item>SDG-Sudanese Pound</item>
        <item>SEK-Swedish krone</item>
        <item>SGD-Singapore Dollar</item>
        <item>SHP-ST\.\-Helena Pound</item>
        <item>SLL-Leone</item>
        <item>SOS-Somalian Shilling</item>
        <item>SRD-Surinam Dollar</item>
        <item>SSP-South Sudanese Pound</item>
        <item>STD-Dobra</item>
        <item>SYP-Syrian Pound</item>
        <item>SZL-Swazi Pound</item>
        <item>THB-Thai Baht</item>
        <item>TJS-Somoni</item>
        <item>TMT-Manat</item>
        <item>TND-Tunesian Dinar</item>
        <item>TOP-Pa\'anga</item>
        <item>TRY-Turkish Lira</item>
        <item>TTD-Trinidad and Tobago Dollar</item>
        <item>TVD-Tuvaluan Dollar</item>
        <item>TWD-New Taiwan Dollar</item>
        <item>TZS-Tansanian Shilling</item>
        <item>UAH-Hrywnja</item>
        <item>UGX-Uganda Schilling</item>
        <item>UYU-Uruguay Peso</item>
        <item>UZS-Uzbekistan Sum</item>
        <item>VEF-Bolívar Fuerte</item>
        <item>VND-Dong</item>
        <item>VUV-Vatu</item>
        <item>WST-Tala</item>
        <item>XAF-Central African Franc</item>
        <item>XCD-Est Caribbean Dollar</item>
        <item>XOF-West African Franc</item>
        <item>XPF-Pacific Franc</item>
        <item>YER-Jemen Rial</item>
        <item>ZAR-South African Rand</item>
        <item>ZMW-Zambian Kwacha</item>
        <item>ZWL-Zimbabwe Dollar</item>
    </string-array>

    <string-array name="allLength">
        <item>Millimeters</item>
        <item>Centimeters</item>
        <item>Meters</item>
        <item>Kilometers</item>
        <item>Inches</item>
        <item>Feet</item>
        <item>Yards</item>
        <item>Miles</item>
    </string-array>

    <string-array name="allArea">
        <item>Square millimeters</item>
        <item>Square centimeters</item>
        <item>Square meters</item>
        <item>Square kilometers</item>
        <item>Square inches</item>
        <item>Square feet</item>
        <item>Square yards</item>
        <item>Square miles</item>
        <item>Hectares</item>
        <item>Acres</item>
    </string-array>

    <string-array name="allData">
        <item>Bits</item>
        <item>Bytes</item>
        <item>Kilobytes</item>
        <item>Kilobits</item>
        <item>Kilobytes</item>
        <item>Megabits</item>
        <item>Megabytes</item>
        <item>Gigabits</item>
        <item>Gigabytes</item>
        <item>Terabits</item>
        <item>Terabytes</item>
        <item>Petabits</item>
        <item>Petabytes</item>
        <item>Exabites</item>
        <item>Exabytes</item>
        <item>Zetabits</item>
        <item>Zetabytes</item>
        <item>Yottabits</item>
        <item>Yottabytes</item>
    </string-array>

    <string-array name="allEnergy">
        <item>Electron volts</item>
        <item>Joules</item>
        <item>Kilojoules</item>
        <item>Calories</item>
    </string-array>

    <string-array name="allangle">
        <item>Degrees</item>
        <item>Radians</item>
        <item>Gradians</item>
    </string-array>

    <string-array name="allNumber">
        <item>Binary</item>
        <item>HexaDecimal</item>
        <item>Decimal</item>
        <item>Octal</item>
    </string-array>


    <string-array name="allPower">
        <item>Watts</item>
        <item>Kilowatts</item>
        <item>Horsepower</item>
    </string-array>

    <string-array name="allPress">
        <item>Bars</item>
        <item>Pascals</item>
        <item>Kilopascals</item>
        <item>Atmospheres</item>
        <item>Millimeters of mercury</item>
        <item></item>
    </string-array>

    <string-array name="allSpeed">
        <item>Centimeters per second</item>
        <item>Meters per second</item>
        <item>Kilometers per hour</item>
        <item>Feet per second</item>
        <item>Miles per hour</item>
        <item></item>
    </string-array>
    
    <string-array name="allTemp">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>


    <string-array name="allTime">
        <item>Microsecond</item>
        <item>Millisecond</item>
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Years</item>
    </string-array>

    <string-array name="allWeight">
        <item>Milligrams</item>
        <item>Centigrams</item>
        <item>Decigrams</item>
        <item>Grams</item>
        <item>Kilogram</item>
        <item>Metric tonnes</item>
        <item>Pounds</item>
        <item>Stones</item>
    </string-array>
</resources>